test/errors/error7.sp
%b_expr in concatenation is not a basic sort.
sorts
#s1={a}. 
#s=f(#s1,#s1).
#s2=[a][#s].
predicates
program rules
